# python-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/feat/: __init__.py  bucketing.py  client.py  context.py  datafile.py  eval.py  operators.py  segments.py  streaming.py  types.py
tests/: test_eval.py  test_streaming.py
