[project]
name = "feat"
version = "0.1.0"
description = "feat feature-flag SDK for Python (server-side, local evaluation)"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
